# io_benchmark

./: .gitignore  README.md  iobandwidth_results.json  iodepth.ipynb
bench/: CMakeLists.txt  bench.cpp  bench_io_uring.h  common.h  create_input.json
bench/experiments/cpu_drive/: run.py
iobandwidth/: iobandwidth.ipynb  runner.py
iobandwidth/data/: iobandwidth_results.json
iodepth/: graphs.py  iodepth.ipynb  parser.py  runner.py  script.sh
iodepth/data/: io_uring_readwrite_iodepth_1.json  io_uring_readwrite_iodepth_128.json  io_uring_readwrite_iodepth_16.json  io_uring_readwrite_iodepth_2.json  io_uring_readwrite_iodepth_32.json  io_uring_readwrite_iodepth_4.json  io_uring_readwrite_iodepth_64.json  io_uring_readwrite_iodepth_8.json  io_uring_sqthread_poll_1_readwrite_iodepth_1.json  io_uring_sqthread_poll_1_readwrite_iodepth_128.json  io_uring_sqthread_poll_1_readwrite_iodepth_16.json  io_uring_sqthread_poll_1_readwrite_iodepth_2.json  io_uring_sqthread_poll_1_readwrite_iodepth_32.json  io_uring_sqthread_poll_1_readwrite_iodepth_4.json  io_uring_sqthread_poll_1_readwrite_iodepth_64.json  io_uring_sqthread_poll_1_readwrite_iodepth_8.json  libaio_readwrite_iodepth_1.json  libaio_readwrite_iodepth_128.json  libaio_readwrite_iodepth_16.json  libaio_readwrite_iodepth_2.json  libaio_readwrite_iodepth_32.json  libaio_readwrite_iodepth_4.json  libaio_readwrite_iodepth_64.json  libaio_readwrite_iodepth_8.json
